--- a/index.html
+++ b/index.html
@@ -4,95 +4,82 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>TextCrypt</title>
-  <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#121212" />
-  <style>
-    body {
-      background-color: #121212;
-      color: white;
-      font-family: sans-serif;
-      padding: 20px;
-      text-align: center;
+  <link rel="manifest" href="manifest.json" />
+  <link rel="icon" href="icon.png" />
+  <script>
+    if ("serviceWorker" in navigator) {
+      navigator.serviceWorker.register("service-worker.js");
     }
-    textarea, input {
-      width: 90%;
-      padding: 10px;
-      margin: 10px 0;
-      border-radius: 8px;
-      border: none;
-      background: #1e1e1e;
-      color: white;
-    }
-    button {
-      padding: 10px 20px;
-      margin: 5px;
-      border: none;
-      border-radius: 8px;
-      background-color: #333;
-      color: white;
-      cursor: pointer;
-    }
-    #qr-container {
-      margin-top: 10px;
-    }
-    #qr-reader {
-      margin-top: 10px;
-    }
-  </style>
-</head>
-<body>
-  <h2>TextCrypt 🔐</h2>
-
-  <textarea id="input" rows="4" placeholder="Введите текст..."></textarea><br />
-  <input id="password" type="text" placeholder="Введите пароль" /><br />
-
-  <button onclick="encrypt()">🔒 Зашифровать</button>
-  <button onclick="decrypt()">🔓 Расшифровать</button>
-  <button onclick="copyOutput()">📋 Копировать</button>
-  <button onclick="generateQR()">📷 QR-код</button>
-  <button onclick="scanQR()">📸 Сканировать QR</button>
-
-  <h3>Результат:</h3>
-  <textarea id="output" rows="4" readonly></textarea>
-  <div id="qr-container"></div>
-  <div id="qr-reader" style="display:none; width: 250px;"></div>
-
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/crypto-js@4.1.1/crypto-js.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
-  <script src="https://unpkg.com/html5-qrcode"></script>
+</head>
+<body style="background:#121212; color:white; font-family:sans-serif; padding:20px">
+  <h2 style="text-align:center">TextCrypt</h2>
+
+  <input id="password" placeholder="Пароль" type="text" style="width:100%; padding:10px; margin-bottom:10px" autocomplete="on" />
+  <textarea id="input" placeholder="Введите текст..." style="width:100%; height:100px; padding:10px"></textarea>
+
+  <div style="margin:10px 0">
+    <button onclick="encryptText()">🔐 Зашифровать</button>
+    <button onclick="decryptText()">🔓 Расшифровать</button>
+    <button onclick="generateQR()">📷 QR-код</button>
+  </div>
+
+  <textarea id="output" placeholder="Результат..." style="width:100%; height:100px; padding:10px"></textarea>
+  <button onclick="copyResult()">📋 Копировать</button>
+
+  <div id="qr-container" style="display:none; margin-top:10px"></div>
 
   <script>
-    function encrypt() {
-      const text = document.getElementById("input").value;
-      const pass = document.getElementById("password").value;
-      if (!text || !pass) return alert("Введите и текст, и пароль");
-      const encrypted = CryptoJS.AES.encrypt(text, pass).toString();
-      document.getElementById("output").value = encrypted;
-      generateQR(); // автоматически создать QR
+    function getKey(pass) {
+      return CryptoJS.PBKDF2(pass, CryptoJS.lib.WordArray.random(16), {
+        keySize: 256 / 32,
+        iterations: 1000
+      });
     }
 
-    function decrypt() {
+    function encryptText() {
       const text = document.getElementById("input").value;
       const pass = document.getElementById("password").value;
-      if (!text || !pass) return alert("Введите и текст, и пароль");
-      try {
-        const decrypted = CryptoJS.AES.decrypt(text, pass).toString(CryptoJS.enc.Utf8);
-        document.getElementById("output").value = decrypted || "Неверный пароль";
-      } catch {
-        alert("Ошибка при расшифровке");
-      }
+      if (!text || !pass) return alert("Введите текст и пароль!");
+      const key = CryptoJS.PBKDF2(pass, "salt", { keySize: 32 / 4, iterations: 1000 });
+      const iv = CryptoJS.lib.WordArray.random(12);
+      const encrypted = CryptoJS.AES.encrypt(text, key, {
+        iv: iv,
+        mode: CryptoJS.mode.GCM,
+        format: CryptoJS.format.OpenSSL
+      });
+      const result = iv.toString() + encrypted.toString();
+      document.getElementById("output").value = result;
     }
 
-    function copyOutput() {
+    function decryptText() {
+      const data = document.getElementById("output").value;
+      const pass = document.getElementById("password").value;
+      if (!data || !pass) return alert("Введите зашифрованный текст и пароль!");
+      const key = CryptoJS.PBKDF2(pass, "salt", { keySize: 32 / 4, iterations: 1000 });
+      const iv = CryptoJS.enc.Hex.parse(data.slice(0, 24));
+      const encrypted = data.slice(24);
+      const decrypted = CryptoJS.AES.decrypt(encrypted, key, {
+        iv: iv,
+        mode: CryptoJS.mode.GCM,
+        format: CryptoJS.format.OpenSSL
+      });
+      document.getElementById("input").value = decrypted.toString(CryptoJS.enc.Utf8);
+    }
+
+    function copyResult() {
       const out = document.getElementById("output");
-      if (!out.value) return;
-      navigator.clipboard.writeText(out.value);
-      alert("Скопировано");
+      out.select();
+      document.execCommand("copy");
+      alert("Скопировано!");
     }
 
     function generateQR() {
       const text = document.getElementById("output").value;
-      if (!text) return;
+      if (!text) return alert("Сначала зашифруй текст.");
       const container = document.getElementById("qr-container");
       container.innerHTML = "";
       QRCode.toCanvas(text, { width: 200 }, function (err, canvas) {
@@ -100,33 +87,6 @@
         container.appendChild(canvas);
         container.style.display = "block";
       });
-    }
-
-    function scanQR() {
-      const reader = document.getElementById("qr-reader");
-      reader.style.display = "block";
-      const html5QrCode = new Html5Qrcode("qr-reader");
-      Html5Qrcode.getCameras().then(devices => {
-        if (devices && devices.length) {
-          const cameraId = devices[0].id;
-          html5QrCode.start(
-            cameraId,
-            { fps: 10, qrbox: 250 },
-            qrMessage => {
-              document.getElementById("input").value = qrMessage;
-              html5QrCode.stop();
-              reader.style.display = "none";
-              alert("QR-код считан!");
-            },
-            err => {}
-          );
-        }
-      }).catch(err => alert("Ошибка камеры: " + err));
-    }
-
-    // Регистрация service-worker
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('service-worker.js');
     }
   </script>
 </body>
